@@ -14,6 +14,8 @@
 	href="<TMPL_VAR NAME="RESOURCES_URL">/css/styles/fish_tank.css"/>
 	<link rel="alternate stylesheet" type="text/css" title="Grayscale"
 	href="<TMPL_VAR NAME="RESOURCES_URL">/css/styles/grayscale.css"/>
+	<link rel="alternate stylesheet" type="text/css" title="Nineties"
+	href="<TMPL_VAR NAME="RESOURCES_URL">/css/styles/nineties.css"/>
 	<TMPL_LOOP NAME="FEEDS">
 	<link rel="alternate" type="<TMPL_VAR NAME="FEED_MIME_TYPE">"
 	title="<TMPL_VAR NAME="FEED_TITLE">" href="<TMPL_VAR NAME="FEED_URL">" />
